--- a/pubwages.html
+++ b/pubwages.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["geochart"]});
@@ -45,6 +48,7 @@
 [{v: 'US-NY', f: 'New York'},3,'+20%'],
 [{v: 'US-NC', f: 'North Carolina'},0, '-5% to +5%'],
 [{v: 'US-ND', f: 'North Dakota'},1,'+6 to +10%'],
+	      
 [{v: 'US-OH', f: 'Ohio'},2,'+11% to +20%'],
 [{v: 'US-OK', f: 'Oklahoma'},1,'+6 to +10%'],
 [{v: 'US-OR', f: 'Oregon'},2,'+11% to +20%'],
