--- a/pubwages.html
+++ b/pubwages.html
@@ -319,7 +319,7 @@ var collectiveData = new google.visualization.DataTable();
 </head>
 <body>
 <div class="container-fluid">
-	<div class="row">
+	<div class="row" style="height:100%">
 		<div class="col-md-3" style="background-color:#dddddd;display:table-cell;float:none;">
 		</div>
 		<div class="col-md-6">
