--- a/pubwages.html
+++ b/pubwages.html
@@ -322,7 +322,7 @@ var collectiveData = new google.visualization.DataTable();
 	<div class="row" >
 		<div class="col-md-3">
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-6 well">
 
 			<p class="h1">Public Sector Employees are Highly Educated, Underpaid</p>
 			<p style="font-style:italic">by Celeste Middleton</p>
