--- a/pubwages.html
+++ b/pubwages.html
@@ -319,10 +319,10 @@ var collectiveData = new google.visualization.DataTable();
 </head>
 <body>
 <div class="container-fluid">
-	<div class="row" >
-		<div class="col-md-3">
+	<div class="row" style="height:100%;display:table" >
+		<div class="col-md-3" style="height:100%;display:table-cell;float:none;">
 		</div>
-		<div class="col-md-6 well">
+		<div class="col-md-6" style="height:100%;display:table-cell;float:none;background-color:#eeeeee">
 
 			<p class="h1">Public Sector Employees are Highly Educated, Underpaid</p>
 			<p style="font-style:italic">by Celeste Middleton</p>
@@ -361,7 +361,7 @@ var collectiveData = new google.visualization.DataTable();
 <p>Ironically, one of the most notorious attempts to restrict the bargaining rights of public employees in recent years has come from the first state to grant union rights to that workforce: Wisconsin. In 1959, twenty-four years after the Wagner Act, Wisconsin Governor Gaylord Nelson signed a law that granted similar rights to public sector unions. In March 2011, Scott Walker and the Wisconsin Legislature stripped many of those rights away, depriving child care workers and university faculty/staff of bargaining collectively, and severely limiting the bargaining ability of most public employees. Governor John Kasich of Ohio signed a similar bill into law that same month, and other states followed suit. Though Wisconsin played a key role in expanding labor rights to the public sector, it’s also been at the forefront of a larger effort to reverse those gains across the country.</p></br>
 <p>Public employee unions do have the power to address the wage gap between public- and private-sector compensation, but unionization has not resulted in exorbitant wages or threats to public safety. Rather, unsubstantiated fears about the power of these unions has led a contemporary push to limit the collective bargaining rights of public employees.</p></br>
 </div>
-		<div class="col-md-3">
+		<div class="col-md-3" style="height:100%;display:table-cell;float:none;">
 		</div>
 	</div>
 </div>	
